--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "vue": "^3.5.18",
+    "vue3-lottie": "^3.3.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
