--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -22,6 +26,11 @@
     "vite": "^7.1.2",
     "vite-plugin-vuetify": "^2.1.2",
     "vue-tsc": "^3.0.5",
-    "vuetify": "^3.9.5"
+    "vuetify": "^3.9.5",
+    "@vue/test-utils": "^2.4.6",
+    "vitest": "^0.34.0",
+    "@vitest/ui": "^0.34.0",
+    "jsdom": "^22.1.0",
+    "@vitest/coverage-v8": "^0.34.0"
   }
 }
