--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -20,17 +24,19 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.2",
+    "@types/node": "^20.19.11",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^0.34.0",
+    "@vitest/ui": "^0.34.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "jsdom": "^22.1.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vite-plugin-vuetify": "^2.1.2",
-    "vue-tsc": "^3.0.5",
-    "vuetify": "^3.9.5",
-    "@vue/test-utils": "^2.4.6",
     "vitest": "^0.34.0",
-    "@vitest/ui": "^0.34.0",
-    "jsdom": "^22.1.0",
-    "@vitest/coverage-v8": "^0.34.0"
+    "vue-tsc": "^3.0.5",
+    "vuetify": "^3.9.5"
   }
 }
